--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
+build/*
 irec
-exit
-arrays
-pre_s.h
-pre_ll.h
-commitid.h
 *.o
 *.out
+tests/arith
+tests/arrays
+tests/exit
+tests/factorial
+tests/fibonacci
+tests/hello
+tests/types
